Fix: z-index of footer and floating div

--- a/fylo-dark-theme-landing-page-master/Fylo Dark Theme/index.css
+++ b/fylo-dark-theme-landing-page-master/Fylo Dark Theme/index.css
@@ -170,8 +170,10 @@ header > ul > li > a:hover{
     border-radius:10px;
     background-color: hsl(219, 30%, 18%);
     box-shadow: 1px 10px 15px 2px hsl(216, 53%, 9%);
+    position: relative;
+    z-index:1;
 }
-#input_field {
+form {
     width:100%;
     display:flex;
     margin-top:1rem;
@@ -202,7 +204,7 @@ footer{
     margin-top: -70px;
     padding: 100px 20px 10px 20px;
     position: relative;
-    z-index: -1;
+    z-index: 0;
    
 }
 #main_footer{
@@ -228,6 +230,9 @@ footer{
     color:unset;
     text-decoration: none;
     padding:10px;
+}
+#links a:hover{
+    font-weight:bold;
 }
 #firs_{
     display: flex;
@@ -261,4 +266,7 @@ footer{
     text-decoration: none;
     width:40px;
     height:40px;
+}
+#socials a:hover{
+    color:hsl(176, 68%, 64%);
 }
